k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdcs-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cdcs-postgres
  template:
    metadata:
      labels:
        component: cdcs-postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-database-pvc
      containers:
        - name: postgres
          image: postgres:9.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
