k8s/django-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: cdcs-django
  ports:
    - name: http
      port: 8080
      targetPort: 80
