k8s/django-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: django-ingress
spec:
  tls:
    - hosts:
      - CDCS_HOSTNAME
      secretName: CDCS_TLS
  rules:
  - host: CDCS_HOSTNAME
    http:
      paths:
      - backend:
          serviceName: django-cluster-ip-service
          servicePort: 8000
